fixed navigation bug

--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,19 @@
       </span>
     </div>
 
+
     <div id = "navigation">
       <table>
         <tr>
-          <td><a href="../projectR/index.html">Home</a></td>
-          <td><a href="../projectR/contact.html">Contact</a></td>
-          <td><a href="../projectR/aboutUs.html">About Us</a></td>
-          <td><a href="../projectR/photos.html">Photos</a></td>
-          <td><a href="../projectR/information.html">Information</a></td>
+          <td><a href="../index.html">Home</a></td>
+          <td><a href="../contact.html">Contact</a></td>
+          <td><a href="../aboutUs.html">About Us</a></td>
+          <td><a href="../photos.html">Photos</a></td>
+          <td><a href="../information.html">Information</a></td>
         </tr>
+
       </table>
     </div>
-
 
     <div id = "contact" style="position:absolute; width:700px; top:210px; left:200px;">
       <h1 style="font-size:18px;">Contact</h1>
