fixed navigation bug again

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       </span>
     </div>
 
+
     <div id = "navigation">
       <table>
         <tr>
-          <td><a href="../index.html">Home</a></td>
-          <td><a href="../contact.html">Contact</a></td>
-          <td><a href="../aboutUs.html">About Us</a></td>
-          <td><a href="../photos.html">Photos</a></td>
-          <td><a href="../information.html">Information</a></td>
+          <td><a href="../site/index.html">Home</a></td>
+          <td><a href="../site/contact.html">Contact</a></td>
+          <td><a href="../site/aboutUs.html">About Us</a></td>
+          <td><a href="../site/photos.html">Photos</a></td>
+          <td><a href="../site/information.html">Information</a></td>
         </tr>
-
       </table>
     </div>
 
