cleaned up the site, going to add twitter feed

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html;
+      charset=windows-1252">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <title></title>
   </head>
   <body>
-
-    <div id = "title">
-      <span>
-	<h1 style="margin-left:200px; font-size:32px;">Project R</h1>
-	<h3 style="margin-left:250px; font-size:12px;"></h3>
-	<h3 style="margin-left:250px; font-size:12px;"></h3>
-    </div>
-
-
-
-    <div id = "navigation">
-      <table>
-        <tr>
-          <td><a href="../site/index.html">Home</a></td>
-          <td><a href="../site/contact.html">Contact</a></td>
-          <td><a href="../site/aboutUs.html">About Us</a></td>
-          <td><a href="../site/photos.html">Photos</a></td>
-          <td><a href="../site/information.html">Information</a></td>
-        </tr>
-      </table>
-    </div>
-
-    <div id = "aboutMe" style="position:absolute; width:700px; top:210px; left:200px;">
+    <div id="title"> <span>
+        <h1 style="margin-left:200px; font-size:32px;">Project R</h1>
+      </span></div>
+    <div id="about" style="position:absolute; width:700px; top:180px;
+      left:200px;">
       <h1 style="font-size:18px;">About Us</h1>
-      <p>Project R is a community outreach society located in Rexburg Idaho.</p>
+      <p>Project R was founded in 2016 with the goal of helping refugees
+        to thrive.&nbsp; Refugees from countries all over the world have
+        found new lives here in Idaho, and we intend to help them love
+        it here!&nbsp; <br>
+      </p>
+      <p>Please contact us for how to volunteer!&nbsp; We love to work
+        with FHE groups or other groups!&nbsp; <br>
+        Contact Daniel Craig at (803)389-6750 for more information.<br>
+      </p>
     </div>
-    
   </body>
 </html>
