ready for content to be added

--- a/mentoring.html
+++ b/mentoring.html
@@ -27,17 +27,9 @@
 	</tbody>
       </table>
     </div>
-    <div id="about"> 
-      <h1 style="font-size:18px;">About Us</h1>
-      <p>Project R was founded in 2016 with the goal of helping refugees
-        to thrive.&nbsp; Refugees from countries all over the world have
-        found new lives here in Idaho, and we intend to help them love
-        it here!&nbsp; <br>
-      </p>
-      <p>Please contact us for how to volunteer!&nbsp; We love to work
-        with FHE groups or other groups!&nbsp; <br>
-        Contact Daniel Craig at (803)389-6750 for more information.<br>
-      </p>
+    <div id="mentoring"> 
+      <h1 style="font-size:18px;">Mentoring</h1>
+      <p>Add the information about mentoring here!</p>
     </div>
   </body>
 </html>
