whoops messed up, forget to have an index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <table>
         <tbody>
           <tr>
-	    <td><a href="../site/aboutUs.html">Home</a></td>
+	    <td><a href="../site/index.html">Home</a></td>
 	  </tr>
 	  <tr>
 	    <td><a href="../site/mentoring.html">Mentoring Links and
